modify: N+1문제 수정